# blueondata-dagster

./: .env  .gitignore  README.md  pyproject.toml  setup.py
data/: orders_file_cleaned.csv  orders_file_raw.csv
ecommerce/: assets.py  definitions.py  resources.py
ecommerce_tests/: test_assets.py
